2003-01-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	updated for 2.4.15

2003-01-15  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Update location of Cameron Simpson's stuff.
	* links.html: Provide link to SCoTT SMeDLeY's FvwmTabs module.

2002-12-30  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html:
	Change the link to the full size image to a link
	to a generated page that contains the full size image.
	* screenshots/make-html.pl:
	Script to wrap each image in a generated page
	with forward and backward links.
	* screenshots/Cameron_Simpson-desk-2560x1024.png:
	Added, the link to his page wont
	work with the script.
	* XXX.html:
	Added a bunch of generated html pages, one for each full size image.

2002-12-29  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Added Len Philpot's screenshot.

2002-12-25  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html (Note): Update location of Parv's web site.

2002-12-22  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Screenshot and config file by Marc A Lehmann.
	Second screenshot by Andre Bonhote.
	Replaced screenshot by Shawn Anderson.

2002-12-08  Mikhael Goikhman  <migo@homemail.com>

	* cvs.html:
	mention autoheader and utils/configure_dev.sh

	* creating_rpms.html:
	* developers.html:
	added full instructions for creating rpm packages

2002-12-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:

2002-11-29  Dan Espen  <dane@mk.telcordia.com>

	* index.html:
	* download.html:
	* generated/NEWS.html
	updated for 2.4.14

2002-11-26  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Added Parv's screenshot.

2002-11-09  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Screenshot by Cameron Simpson.

	* vector-buttons/vector-buttons.html: Added some vector buttons.

2002-11-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	updated for 2.4.13
