@@ -34,19 +34,19 @@ release, is now available for <a href="download.html">download</a>.
 
 <table border=0 cellpadding=0 cellspacing=0 width="100%"><tr>
 <td width="50%"><ul>
-  <li><a href="download.html">Downloads</a>
+  <li><a href="download.html">Download</a>
   <li><a href="features.html">Features</a>
   <li><a href="generated/NEWS.html">Latest News</a>
   <li><a href="generated/FAQ.html">FAQ</a>
-  <li><a href="screenshots/">Screen shots</a>
+  <li><a href="screenshots/">Screen Shots</a>
+  <li><a href="generated/manpages/">Manual Pages</a>
   <li><a href="sample-menus/index.html">Sample Menus</a>
   <li><a href="vector-buttons/vector-buttons.html">Vector Buttons</a>
-  <li><a href="generated/manpages/">Manual Pages</a>
 </ul>
 <td width="50%"><ul>
-  <li><a href="links.html">Links</a>
   <li><a href="icons.html">Icons and Sounds Download</a>
-  <li><a href="mailinglist.html">Mailing List Info</a>
+  <li><a href="links.html">Links</a>
+  <li><a href="mailinglist.html">Mailing List and IRC channel Info</a>
   <li><a href="http://www.hpc.uh.edu/fvwm/archive">Mail Archive</a>
   <li><a href="http://www.fvwm.org/cgi-bin/fvwm-bug">FVWM Bug Reporting</a>
   <li><a href="developers.html">Developer Info (CVS, Modules)</a>
