@@ -1,12 +1,12 @@
 <html>
   <head>
-    <title>The Official FVWM Homepage - Mailing List Info</title>
+    <title>The Official FVWM Homepage - Mailing List and IRC channel Info</title>
   </head>
   <body BACKGROUND="black-stone1.jpg"
     bgcolor="#000000" text="#ffffff"
     link="#FFFF88" vlink="#EEDDDD" alink="#ff0000">
     <center>
-      <h1><font color="pink">The Official FVWM Homepage - Mailing List Info
+      <h1><font color="pink">The Official FVWM Homepage - Mailing List and IRC channel Info
 	</font></h1>
     </center>
 
@@ -59,7 +59,19 @@ Also the mailing lists are now <a href="http://www.hpc.uh.edu/fvwm/archive/">arc
 
 <p>
 
-    <hr>
+Several IRC channels are also available to discuss fvwm related
+topics or to get help.  They are not official in a sense that the
+fvwm developers maintain them, but there is a chance to meet some
+of the developers there:
+
+<ul>
+<li> #fvwm    on freenode
+<li> +fvwm.de on IRCnet (German channel)
+</ul>
+
+
+
+<hr>
 
   </body>
 </html>
