@@ -1,3 +1,9 @@
+2003-01-26  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* mailinglist.html:
+	* index.html:
+	added info about irc channels and cleaned up front page a bit
+
 2003-01-24  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* index.html:
